<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Uni Saar</string>
    <string name="newsText">News</string>
    <string name="restaurantText">Restaurant</string>
    <string name="mensa_text">Mensa</string>
    <string name="campusText">Campus</string>
    <string name="eventsText">Events</string>
    <string name="event_article">Event</string>
    <string name="busText">Bus</string>
    <string name="staff_searchText">Staff Search</string>
    <string name="search_results">Search Results</string>
    <string name="info">Info</string>
    <string name="aboutText">About</string>
    <string name="empty_string">""</string>
    <string name="bus_stations_text">Bus Stations</string>
    <string name="bus_search_text">Search</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="professors_only">Professors only</string>
    <string name="all">All</string>
    <string name="filter">Filter</string>
    <string name="opening_hours">Opening hours</string>
    <string name="mensa">Mensa</string>
    <string name="mensa_cafe">Mensacafé</string>
    <string name="heroes_cafe">Heroes café</string>
    <string name="auslander_cafe">Ausländercafé</string>
    <string name="juristen_cafe">Juristencafé</string>
    <string name="during_semester">During the semester:</string>
    <string name="mon_to_thur">Monday to Thursday:</string>
    <string name="mon_to_thur_time">11:30 am - 2:30 pm</string>
    <string name="friday">Friday:</string>
    <string name="friday_time">11:30 am - 2:15 pm</string>
    <string name="saturday">Saturday:</string>
    <string name="saturday_time">11:30 am - 1:30 pm</string>
    <string name="free_flow">Free flow</string>
    <string name="set_meal">Set meal and vegetarian meal</string>
    <string name="mon_to_fri">Monday to Friday:</string>
    <string name="mon_to_fri_time">11:30 am - 1:45 pm</string>
    <string name="during_break">During semester break:</string>
    <string name="mon_to_fri_time_hom">11.00 am - 14.30 pm</string>
    <string name="mon_to_fri_time_hom_break"> 11.00 am - 14.00 pm</string>
    <string name="mon_to_thur_time_break">11:30 am - 2:15 pm</string>
    <string name="serving">Serving counter</string>
    <string name="friday_time_break">11:30 am - 2:00 pm</string>
    <string name="mon_to_fri_mensa_cafe_time">7:45 am - 8:00 pm</string>
    <string name="mon_to_fri_mensa_cafe_warm_meals">warm meals all day</string>
    <string name="mon_to_fri_mensa_cafe_warm_meals_until">(until 7:30 pm)</string>
    <string name="mon_to_thur_time_break_mensa_cafe">7:45 am - 3:00 pm</string>
    <string name="mon_to_thur_juristen_cafe_time">7:00 am - 4:00 pm</string>
    <string name="friday_time_break_mensa_cafe">7:45 am - 2:45 pm</string>
    <string name="mon_to_thur_auslander_cafe_time">9:00 am - 7:00 pm</string>
    <string name="mon_to_thur_auslander_cafe_time_break">9:00 am - 6:00 pm</string>
    <string name="fri_and_bank_holidayas">Friday and before bank holidays:</string>
    <string name="fri_and_bank_holi_time">9:00 am - 5:00 pm</string>
    <string name="friday_time_juristen">7:00 am - 3:00 pm</string>
    <string name="mon_to_fri_juristen_cafe_time_break">7:00 am - 3:00 pm</string>
    <string name="news_article">News article</string>
    <string name="not_connected">Not connected to internet</string>
    <string name="name">NAME</string>
    <string name="gender">GENDER</string>
    <string name="academic_degree">ACADEMIC DEGREE</string>
    <string name="building">BUILDING</string>
    <string name="room">ROOM</string>
    <string name="phone">PHONE</string>
    <string name="fax">FAX</string>
    <string name="email">E-MAIL</string>
    <string name="more_info">More information</string>
    <string name="categories">Categories</string>
    <string name="pin_all">Pin All</string>
    <string name="email_subject">Concerning Saarland University Android app</string>
    <string name="action">Action</string>
    <string name="web_or_route">Visit website or route</string>
    <string name="website">Website</string>
    <string name="route">Route</string>
    <string name="ok" translatable="false">OK</string>
    <string name="no_staff_member_title">Staff member not found</string>
    <string name="no_staff_member_found_description">Unfortunately no staff member matches your search criteria.</string>
    <string name="too_few_search_terms_title">Too few search terms</string>
    <string name="too_few_search_terms_description">Please provide more or longer search terms.</string>
    <string name="empty_search_field">Empty search field</string>
    <string name="fill_at_least_one">Please fill at least one search field.</string>
    <string name="check_internet_message">Please check your internet connection and try again.</string>
    <string name="mon_to_fri_heroes_time">10:30 am - 4:30 pm</string>
    <string name="at_station">At bus station</string>
    <string name="search_bus">Search a bus</string>
    <string name="current_location_not_set">Current location is not set</string>
    <string name="enable_location_option">Please enable at least one location option</string>
    <string name="copyright">© Saarland University</string>
    <string name="contact_feedback">Contact / Feedback</string>
    <string name="development">Development:</string>
    <string name="supervision">Supervision:</string>
    <string name="special_thanks">Special Thanks to:</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="labels">Labels</string>
    <string name="c_homburg" translatable="false">Campus Homburg</string>
    <string name="c_saarbruecken" translatable="false">Campus Saarbrücken</string>
    <string name="choose_campus">Choose your campus</string>
    <string name="choose_campus_message">This setting customizes the mensa menu, bus stations and the map.</string>
    <string name="noEventsText">No events found.</string>
    <string name="noNewsText">No news found.</string>
    <string name="networkError">Network error</string>
    <string name="emptyDocumentError">Error: empty document</string>
    <string name="mensaPriceFormat">students: %1$.2f€   staff: %2$.2f€   guests: %3$.2f€</string>
    <string name="no_description">no description</string>
    <!-- labels for mensa items (selected programmatically, so ignore "no use" warnings): -->
    <string name="label_1">With dye</string>
    <string name="label_2">With preservatives</string>
    <string name="label_3">With antioxidants</string>
    <string name="label_4">With flavor enhancer</string>
    <string name="label_5">Sulfurized</string>
    <string name="label_6">Blackened</string>
    <string name="label_7">Waxed</string>
    <string name="label_8">With phosphate</string>
    <string name="label_9">With sweeteners</string>
    <string name="label_10">Contains a source of phenylalanine</string>
    <string name="label_11">With milk protein</string>
    <string name="label_12">With poultry</string>
    <string name="label_13">With pork</string>
    <string name="label_14">With alcohol</string>
    <string name="label_15">May contain traces of nuts</string>
    <string name="label_16">Without pork</string>
    <string name="label_17">With garlic</string>
    <string name="label_18">Vegetarian</string>
    <string name="label_19">Organic food</string>
    <string name="label_20">With baking agent</string>
    <string name="label_21">Free of lactose</string>
    <string name="label_22">Vegan food</string>
    <string name="label_23">Fish from sustainable fishing</string>
    <string name="label_ei">Egg</string>
    <string name="label_en">Peanut</string>
    <string name="label_fi">Fish</string>
    <string name="label_gl">Grain, cereals with gluten</string>
    <string name="label_kr">Crustacean</string>
    <string name="label_la">Milk and lactose</string>
    <string name="label_lu">Lupine</string>
    <string name="label_nu">Nuts</string>
    <string name="label_se">Sesame</string>
    <string name="label_sf">Mustard</string>
    <string name="label_sl">Celery</string>
    <string name="label_so">Soya</string>
    <string name="label_sw">Sulfur dioxide / sulfites</string>
    <string name="label_we">Wheat</string>
    <string name="label_wt">Mollusk</string>
    <!-- end of labels for mensa items -->
    <string name="show_ingredients_title">Show ingredients</string>
    <string name="show_ingredients_on">Mensa ingredients are shown</string>
    <string name="show_ingredients_off">Mensa ingredients are <b>not</b> shown</string>
    <string name="remove_all_pins">Remove all pins</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_standard">Standard</string>
    <string name="map_satellite">Satellite</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="mensa_notifications_pref_title">Mensa Notifications (experimental)</string>
    <string name="mensa_settings">Mensa</string>
    <string name="none">None</string>
    <string name="mensa_notification_title">Today\'s Mensa Menu</string>
    <string name="mensa_notification_text_click">Click to see today\'s mensa menu</string>
    <string name="mensa_notification_text_expand">Expand to see today\'s mensa menu</string>
    <string name="visit_github">Visit source code on GitHub</string>
    <string name="whatsnew_title">What\'s new in this version?</string>
    <string name="whatsnew_text">• Fixed unresponsive bus itinerary\n• Added bus stop Stuhlsatzenhaus\n• Fixes for android 6\n• Dudweiler campus\n• Widget for current mensa menu\n• Scheduled notifications for mensa (experimental)\n• Source code of this app now on GitHub (check the "about" page)</string>
    <string name="whatsnew_label">Whats New</string>
    <string name="OLD_SSL_ERROR">Not supported on old devices:%n%s</string>
</resources>
