<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:background="@drawable/home_screen_background">

    <TextView
            android:id="@+id/heading"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical|center_horizontal" android:textColor="#000000" android:text="@string/mensa_cafe"
            android:layout_marginTop="15dp" android:textSize="18dp" android:singleLine="true"
            android:textStyle="bold"/>
    <TextView
            android:id="@+id/during_semester"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:gravity="left|center_horizontal" android:textColor="#000000" android:text="@string/during_semester"
            android:layout_marginTop="60dp" android:textSize="14dp" android:singleLine="true"
            android:textStyle="normal" android:layout_marginLeft="30dp"/>

    <TableRow
            android:layout_width="310dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="80dp">
        <TextView
                android:layout_width="180dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri"
                android:text="@string/mon_to_fri" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri_time"
                android:text="@string/mon_to_fri_mensa_cafe_time" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>

    <TableRow
            android:layout_width="310dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp">
        <TextView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri_empty"
                android:text="@string/empty_string" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true" android:gravity="center_vertical|center_horizontal"/>
        <TextView
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri_time_warm"
                android:text="@string/mon_to_fri_mensa_cafe_warm_meals" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>
    <TableRow
            android:layout_width="310dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="120dp">
        <TextView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri_empty_until"
                android:text="@string/empty_string" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri_time_warm_until"
                android:text="@string/mon_to_fri_mensa_cafe_warm_meals_until" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>

    <TextView
            android:id="@+id/during_semester_break"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:gravity="left|center_horizontal" android:textColor="#000000" android:text="@string/during_break"
            android:layout_marginTop="210dp" android:textSize="14dp" android:singleLine="true"
            android:textStyle="normal" android:layout_marginLeft="30dp"/>

    <TableRow
            android:layout_width="310dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="230dp">
        <TextView
                android:layout_width="180dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_thur_break"
                android:text="@string/mon_to_thur" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_thur_time_break"
                android:text="@string/mon_to_thur_time_break_mensa_cafe" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>
    <TableRow
            android:layout_width="310dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="250dp">
        <TextView
                android:layout_width="180dp"
                android:layout_height="20dp"
                android:id="@+id/friday_break"
                android:text="@string/friday" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:id="@+id/friday_time_break"
                android:text="@string/friday_time_break_mensa_cafe" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>

</RelativeLayout>