<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:background="@drawable/home_screen_background">

        <TextView
                android:id="@+id/heading"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical|center_horizontal" android:textColor="#000000" android:text="@string/mensa"
                android:layout_marginTop="15dp" android:textSize="18dp" android:singleLine="true"
                android:textStyle="bold"/>
    <TextView
            android:id="@+id/during_semester"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:gravity="left|center_horizontal" android:textColor="#000000" android:text="@string/during_semester"
            android:layout_marginTop="60dp" android:textSize="14dp" android:singleLine="true"
            android:textStyle="normal" android:layout_marginLeft="30dp"/>
    <TextView
            android:id="@+id/set_meal"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:gravity="left|center_horizontal" android:textColor="#000000" android:text="@string/set_meal"
            android:layout_marginTop="80dp" android:textSize="14dp" android:singleLine="true"
            android:textStyle="normal" android:layout_marginLeft="40dp"/>
    <TableRow
            android:layout_width="260dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/set_meal" android:layout_marginTop="100dp">
        <TextView
                android:layout_width="140dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_thur"
                android:text="@string/mon_to_thur" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_thur_time"
                android:text="@string/mon_to_thur_time" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>
    <TableRow
            android:layout_width="260dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/set_meal" android:layout_marginTop="120dp">
        <TextView
                android:layout_width="140dp"
                android:layout_height="20dp"
                android:id="@+id/friday"
                android:text="@string/friday" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:id="@+id/friday_time"
                android:text="@string/friday_time" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>
    <TableRow
            android:layout_width="260dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/set_meal" android:layout_marginTop="140dp">
        <TextView
                android:layout_width="140dp"
                android:layout_height="20dp"
                android:id="@+id/saturday"
                android:text="@string/saturday" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:id="@+id/saturday_time"
                android:text="@string/saturday_time" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>

    <TextView
            android:id="@+id/free_flow"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:gravity="left|center_horizontal" android:textColor="#000000" android:text="@string/free_flow"
            android:layout_marginTop="160dp" android:textSize="14dp" android:singleLine="true"
            android:textStyle="normal" android:layout_marginLeft="40dp"/>
    <TableRow
            android:layout_width="260dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/set_meal" android:layout_marginTop="180dp">
        <TextView
                android:layout_width="140dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri"
                android:text="@string/mon_to_fri" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri_time"
                android:text="@string/mon_to_fri_time" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>

    <TextView
            android:id="@+id/during_semester_break"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:gravity="left|center_horizontal" android:textColor="#000000" android:text="@string/during_break"
            android:layout_marginTop="210dp" android:textSize="14dp" android:singleLine="true"
            android:textStyle="normal" android:layout_marginLeft="30dp"/>
    <TextView
            android:id="@+id/set_meal_break"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:gravity="left|center_horizontal" android:textColor="#000000" android:text="@string/set_meal"
            android:layout_marginTop="230dp" android:textSize="14dp" android:singleLine="true"
            android:textStyle="normal" android:layout_marginLeft="40dp"/>

    <TableRow
            android:layout_width="260dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/set_meal" android:layout_marginTop="250dp">
        <TextView
                android:layout_width="140dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_thur_break"
                android:text="@string/mon_to_thur" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_thur_time_break"
                android:text="@string/mon_to_thur_time_break" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>
    <TableRow
            android:layout_width="260dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/set_meal" android:layout_marginTop="270dp">
        <TextView
                android:layout_width="140dp"
                android:layout_height="20dp"
                android:id="@+id/friday_break"
                android:text="@string/friday" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:id="@+id/friday_time_break"
                android:text="@string/friday_time_break" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>
    <TextView
            android:id="@+id/free_flow_break"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:gravity="left|center_horizontal" android:textColor="#000000" android:text="@string/free_flow"
            android:layout_marginTop="300dp" android:textSize="14dp" android:singleLine="true"
            android:textStyle="normal" android:layout_marginLeft="40dp"/>
    <TableRow
            android:layout_width="260dp"
            android:layout_height="20dp" android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_below="@+id/set_meal" android:layout_marginTop="320dp">
        <TextView
                android:layout_width="140dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri_break"
                android:text="@string/mon_to_fri" android:textSize="12dp" android:textColor="#000000"
                android:singleLine="true"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:id="@+id/mon_to_fri_time_break"
                android:text="@string/mon_to_fri_time" android:textSize="12dp" android:singleLine="true"
                android:textColor="#000000"/>
    </TableRow>

</RelativeLayout>